<resources>
    <string name="app_name">AndroidAssignments</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I am a Button</string>
    <string name="loginTitle">Login</string>
    <string name="loginName">Login Name</string>
    <string name="passwordTitle">Password</string>
    <string name="switchName">Flip</string>
    <string name="loginButton">Login</string>
    <string name="title_activity_test_toolbar">TestToolbar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="weatherForecast">Weather Forecast</string>
    <string name="minTemp">Min Temp:</string>
    <string name="maxTemp">Max Temp:</string>
    <string name="currTemp">Current Temp:</string>
    <string name="messageSec">Message Here</string>
    <string name="messageID">ID</string>
    <string name="deleteMessage">Delete Messaget</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="aboutToast">Mohammad Safi</string>
    <string name="title_activity_weather_forcast">WeatherForcast</string>

</resources>